# rust-exercises

./: LICENSE  README.md  cleangit.sh  script.txt
fltk/: Cargo.toml  README.md
fltk/src/: main.rs
fltkeditor/: Cargo.toml
fltkeditor/src/: main.rs
hello/: Cargo.toml
hello-wasm/: Cargo.toml
hello-wasm/src/: lib.rs
hello/src/: build.sh  hello
lua-test/: Cargo.toml  README.md
lua-test/src/: main.rs
luajit-test/: Cargo.toml  README.md
luajit-test/src/: main.rs
mips/: Cargo.toml
mips/src/: main.rs
mlua-test/: Cargo.toml
mlua-test/src/: main.rs
openurl/: Cargo.toml
openurl/src/: main.rs
pdfprint/: Cargo.toml  cur_time.txt
pdfprint/src/: main.rs
qrcode/: Cargo.toml
qrcode-server/: Cargo.toml  Makefile
qrcode-server/src/: main.rs
qrcode/src/: main.rs
rocketweb/: Cargo.toml
rocketweb/src/: main.rs
server-sent-events/: Cargo.toml
server-sent-events/src/: index.html  main.rs
sqlite-test/: Cargo.toml
sqlite-test/src/: main.rs
static-web/: Cargo.toml
static-web/src/: main.rs
sysstat/: Cargo.toml
sysstat/src/: main.rs
todo-cli/: Cargo.toml  build-arm.sh  db.txt
todo-cli/data.ms/main/: lock.mdb
todo-cli/data.ms/update/: lock.mdb
todo-cli/src/: main.rs
web-server/: Cargo.toml
web-server/src/: main.rs
