[package]
name = "fltk"
version = "0.1.0"
authors = ["Philip Zhang <zhangxilai@doublechaintech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1", features = ["fltk-bundled"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = "debuginfo"