[package]
name = "qrcode-server"
version = "0.1.0"
authors = ["Philip Zhang <zhangxilai@doublechaintech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
qrcode = "0.14.1"
image = "0.25.6"
urlencoding = "2.1.3"
