[package]
name = "server-sent-events"
version = "0.1.0"
authors = ["Philip Zhang <zhangxilai@doublechaintech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.5"
actix-web = "1.0"
env_logger = "0.6"
futures = "0.1"
tokio = "0.1"
