[package]
name = "todo-cli"
version = "0.1.0"
authors = ["Philip Zhang <zhangxilai@doublechaintech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.armv7-unknown-linux-gnueabihf]
linker = "gcc-arm-linux-gnueabi"